Maven wont work as of now, trying with bigger heapsize